# baibaiAIGC

./: .gitignore  README.md  SKILL.md  requirements.txt  start-web.bat
app/: package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: DocumentCard.tsx  ModelConfigCard.tsx
app/src/hooks/: useAppState.ts
app/src/lib/: appService.ts  desktopService.ts  webService.ts
app/src/styles/: global.css
app/src/types/: app.ts
references/: usage.md
scripts/: aigc_records.py  aigc_round_service.py  app_config.py  app_service.py  build_app_service.ps1  chunking.py  docx_pipeline.py  llm_client.py  run_aigc_round.py  runtime_paths.py  skill_round_helper.py  start_web_dev.ps1  web_app.py
tests/: test_aigc_round_service.py  test_chunking.py
